--- a/index.html
+++ b/index.html
@@ -3,53 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio - Luis González</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Portafolio – Desarrollo de Software IV</title>
+
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background: #f2f2f2;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background: #003366;
+            color: white;
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 32px;
+        }
+
+        .sub {
+            font-size: 18px;
+            margin-top: 10px;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 20px auto;
+        }
+
+        .card {
+            background: white;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 12px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+        }
+
+        a {
+            color: #003366;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
+
 <body>
 
-    <header>
-        <h1>Portafolio – Desarrollo de Software IV</h1>
-        <h2>Universidad Tecnológica de Panamá</h2>
-        <p>Estudiante: Luis Felipe González Rodríguez</p>
-        <p>Cédula: 4-833-1</p>
-    </header>
+<header>
+    <h1>Portafolio – Desarrollo de Software IV</h1>
+    <div class="sub">Estudiante: Luis Felipe González Rodríguez<br>
+    Cédula: 4-833-1</div>
+</header>
 
-    <section>
+<div class="container">
+
+    <div class="card">
         <h2>Introducción</h2>
         <p>
-            El presente portafolio recopila las actividades, asignaciones y evidencias desarrolladas durante el curso 
-            <strong>Desarrollo de Software IV</strong>. Su propósito es mostrar mi aprendizaje, el progreso alcanzado y 
-            los conocimientos aplicados a lo largo del semestre mediante trabajos prácticos y documentación técnica.
+            Este portafolio reúne todas las asignaciones, tareas, talleres y evidencias desarrolladas durante el curso <strong>Desarrollo de Software IV</strong>.
+            Aquí podrás acceder directamente a cada archivo del semestre.
         </p>
-    </section>
+    </div>
 
-    <section>
-        <h2>Asignaciones del Curso</h2>
-        <p>Aquí se presentan los trabajos realizados durante el semestre:</p>
-
+    <div class="card">
+        <h2>Documentos del Curso</h2>
         <ul>
-            <li><a href="documentos/asignacion1.pdf" target="_blank">Asignación 1</a></li>
-            <li><a href="documentos/asignacion2.pdf" target="_blank">Asignación 2</a></li>
-            <li><a href="documentos/proyecto1.pdf" target="_blank">Proyecto 1</a></li>
-            <li><a href="documentos/evidencia1.png" target="_blank">Evidencia 1 (imagen)</a></li>
+            <li><a href="documentos/Investigacion%20%231%20DSF4.pdf" target="_blank">Investigación #1 DSF4 (PDF)</a></li>
+            <li><a href="documentos/Laboratorio2.pdf" target="_blank">Laboratorio 2 (PDF)</a></li>
+            <li><a href="documentos/Parcial%201.pdf" target="_blank">Parcial 1 (PDF)</a></li>
+            <li><a href="documentos/parcial-2.zip" download>Parcial 2 (ZIP)</a></li>
+            <li><a href="documentos/practico1.pdf" target="_blank">Práctico 1 (PDF)</a></li>
+            <li><a href="documentos/taller-2.zip" download>Taller 2 (ZIP)</a></li>
+            <li><a href="documentos/taller-3.zip" download>Taller 3 (ZIP)</a></li>
         </ul>
+    </div>
 
-        <p><em>*Puedes cambiar los nombres y agregar más enlaces según tus archivos reales.*</em></p>
-    </section>
-
-    <section>
-        <h2>Conclusión</h2>
-        <p>
-            Este portafolio representa mi compromiso con el desarrollo de software y la aplicación de los conceptos 
-            aprendidos durante el curso. A través de cada asignación reforcé mis habilidades técnicas y pude comprender 
-            mejor el proceso de construcción de soluciones de software profesionales.
-        </p>
-    </section>
-
-    <footer>
-        <p>© 2025 – Luis Felipe González Rodríguez</p>
-    </footer>
+</div>
 
 </body>
 </html>
+
