--- a/index.html
+++ b/index.html
@@ -86,8 +86,22 @@
         </ul>
     </div>
 
+    <div class="card">
+        <h2>Conclusión</h2>
+        <p>
+            Este portafolio representa el trabajo realizado durante el desarrollo del curso de 
+            <strong>Desarrollo de Software IV</strong>. A través de las distintas actividades, prácticas, 
+            investigaciones y evaluaciones, se reforzaron conceptos clave como la gestión de versiones, 
+            administración de sistemas, trabajo con repositorios, desarrollo estructurado y buenas prácticas 
+            en programación.  
+            <br><br>
+            La recopilación de estos documentos refleja el avance adquirido en competencias técnicas y 
+            demuestra la capacidad de aplicar conocimientos teóricos en ejercicios prácticos, lo cual 
+            fortalece la formación profesional dentro del área de desarrollo de software.
+        </p>
+    </div>
+
 </div>
 
 </body>
 </html>
-
